--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,10 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.27.0'
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support:design:26.1.0'
+
     compile 'com.google.firebase:firebase-database:11.6.2'
+    compile 'com.google.firebase:firebase-firestore:11.6.2'
+
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:26.1.0'
     compile 'com.android.support:recyclerview-v7:26.1.0'
