--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,13 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.jvdm.recruits.MainActivity" />
         </activity>
+        <activity
+            android:name=".Activities.GroupDetailActivity"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.jvdm.recruits.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
